Use List convenience methods in rest actions
This commit replaces usages of older collection utility methods with
the JDK 9 convenience method `List.of()`.

Relates #51950